soc canister tests

--- a/SOC_SoilCanister_210402.ipynb
+++ b/SOC_SoilCanister_210402.ipynb
@@ -752,9 +752,122 @@
     "    ax.set_title(f\"Absorbance at {abs_waves[i]} nm by Depth\")\n",
     "    ax.set_ylim(64.0, 0.0)\n",
     "    ax.set_ylabel(\"Depth (cm)\")\n",
-    "    ax.set_xlabel(\"Absorbance\")\n",
+    "    ax.set_xlabel(\"Absorbance\")    \n",
     "    ax.plot(ins_abs_df[abs_waves[i]], ins_abs_df['depth'] + 2 );\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ins_abs_df.to_csv('ins001.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<KeysViewHDF5 ['ins001', 'ins002', 'ins003', 'ins004', 'ins005', 'ins006', 'ins007', 'ins008']>"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "session = 'session002/cal001'\n",
+    "h5_file[session].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "insertions = list(h5_file[session].keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "positions = [('ins002', 20.2), ('ins003', 27.2), ('ins004', 34.4), ('ins005', 41.5),\n",
+    "            ('ins006', 48.4), ('ins007', 55.3), ('ins008', 64.4)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ins001',\n",
+       " 'ins002',\n",
+       " 'ins003',\n",
+       " 'ins004',\n",
+       " 'ins005',\n",
+       " 'ins006',\n",
+       " 'ins007',\n",
+       " 'ins008']"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "insertions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vis_cols = [round(x, 1) for x in vis_waves.tolist()]\n",
+    "ftir_cols = [round(x, 1) for x in ftir_waves.tolist()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for insertion in insertions:\n",
+    "    vis_absorb = h5_file[f'session002/cal001/{insertion}/spectrometer1/derived/absorbances']\n",
+    "    ftir_absorb = h5_file[f'session002/cal001/{insertion}/spectrometer2/derived/absorbances']\n",
+    "    vis_insertion_filename = f'{insertion}_vis_absorbance.csv'\n",
+    "    ftir_insertion_filename = f'{insertion}_ftir_absorbance.csv'\n",
+    "    vis_df = pd.DataFrame(data=vis_absorb, columns=vis_cols)\n",
+    "    ftir_df = pd.DataFrame(data=ftir_absorb, columns=ftir_cols)\n",
+    "    vis_df.to_csv(vis_insertion_filename)\n",
+    "    ftir_df.to_csv(ftir_insertion_filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h5_file.close()"
    ]
   },
   {
